name:                range-set
version:             0.1.0.0
synopsis:            A set of elements represented as a list of ranges.
description:         A set of elements represented as a list of ranges.
homepage:            http://github.com/micxjo/range-set
license:             BSD3
license-file:        LICENSE
author:              Micxjo Funkcio <micxjo@fastmail.com>
maintainer:          Micxjo Funkcio <micxjo@fastmail.com>
copyright:           (c) 2016, Micxjo Funkcio
category:            Data
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Data.RangeSet, Data.Range
  build-depends:       base >= 4.7 && < 5
                     , semigroups
  default-language:    Haskell2010

test-suite range-set-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             test.hs
  build-depends:       base
                     , range-set
                     , tasty
                     , tasty-hunit
                     , tasty-quickcheck
                     , semigroups
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/micxjo/range-set
